--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Abajo .gitignore generico para Python creado por Github
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -143,6 +145,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+GEMINI.md
 
 # Spyder project settings
 .spyderproject
